test/syntaxerrors/TestSqBracketsIF.jdc
int i = 10;

if [i < 10] {
    //do something
}